testsuite/tests/rename/should_fail/T16002.hs
{-# LANGUAGE TypeFamilies #-}
module T16002 where

data A
type family B (x :: *) :: * where
  A x = x
